# battery_watcher

./: CMakeLists.txt  README.md  daemon.cpp
